--- a/en/systems/atlanttic-microcement-for-pools.html
+++ b/en/systems/atlanttic-microcement-for-pools.html
@@ -208,7 +208,7 @@
                     <li>
                         <a href="#up" style="font-size:26px">Atlanttic</a>
                     </li>
-                    <li><a href="#que-es-arcocem">What is Atlanttic?</a></li>
+                    <li><a href="#que-es-atlanttic">What is Atlanttic?</a></li>
                     <li><a href="#atlanttic-aquaciment">Aquaciment</a></li>
                 </ul>
             </div>
@@ -298,8 +298,6 @@
                                     why, it is suitable also for terraces,
                                     humid areas and in vertical and
                                     trafficable surfaces.</p>
-
-
                             </div>
                         </div>
                     </div>
@@ -364,7 +362,7 @@
                                     <i class="fa fa-file-pdf-o fa-stack-1x"></i>
                                 </span>Download here the technical sheet of
                                 Atlanttic Aquaciment
-                            </a> -->
+                            </a>  iwa ma 3-->
                         </div>
                     </div>
                     <!-- Tipos de cubos -->
