--- a/noticias-microcemento/6-razones-baños-microcemento-seran-tendencia.html
+++ b/noticias-microcemento/6-razones-baños-microcemento-seran-tendencia.html
@@ -29,9 +29,9 @@
 
     <!-- End new styles -->
 
-    <title> Piscinas de microcemento, la mejor opción posible </title>
+    <title> 6 razones por las que los baños de microcemento serán tendencia en 2021</title>
     <meta name="description"
-        content="Las piscinas de microcemento son tendencia: descubre los motivos." />
+        content=" Los baños de microcemento se pondrán de moda en 2021. En Topciment, fabricantes de microcemento líderes en España,  te descubrimos por qué. " />
     <style type="text/css">
         div.ocultable {
             display: none;
@@ -285,95 +285,155 @@
                             <h1 id="queeselmicrocemento" data-animate-scroll='{"x": "-100",
                         "y": "0",
                         "alpha": "0",
-                        "duration": "1"}'><span class="en2">Piscinas
-                                    de microcemento, la mejor opción posible</span>
+                        "duration": "1"}'><span class="en2">Seis/6 razones por las que los baños de microcemento serán
+                                    tendencia en 2021</span>
                             </h1>
                         </div>
 
                         <div class="contenedorMenuOculto">
                             <div class="contenedorMagenDerecha">
                                 <div class="titular  fadeInRight estiloNormal16justificado">
+                                    <h2 class="h3s">Si estás pensando en renovar o agrandar el cuarto de baño en los
+                                        próximos meses este artículo es para ti. Los baños de microcemento,
+                                        revestimiento decorativo de altas prestaciones, serán tendencia en 2021. En
+                                        Topciment sabemos muy bien de qué hablamos, por algo somos fabricantes de
+                                        microcemento líderes en España.</h2>
 
-                                    <p>Tener piscina propia suele ser uno de los sueños más recurrentes. Y es que ¿quién
-                                        no querría estar todo el día en remojo o en el césped de su casa tomando
-                                        tranquilamente el sol?
-                                        Por eso, cada vez que imaginamos una piscina, lo hacemos con todo tipo de
-                                        características para que no le falte detalle. Y, si queremos lo mejor, una
-                                        piscina de microcemento es la opción perfecta.</p>
 
-                                    <img style=" display: block;margin-left: auto;margin-right: auto;"
-                                        src="../imagenes/news/proyecto-sardinera03.jpg" alt="Microcemento para piscinas"
-                                        title="Microcemento para piscinas" height="50%" />
-                                    <h2 class="en4">Ventajas de utilizar el microcemento en piscinas</h2>
-                                    <p>El uso del microcemento en piscinas ofrece muchos beneficios funcionales y de
-                                        mantenimiento:</p>
-                                    <strong>Reduce la suciedad frente a otros materiales.</strong>
-                                    <p>En los diseños convencionales de piscinas donde predomina el azulejo, se acumula
-                                        mucha suciedad y moho en las juntas. El microcemento, al no tener juntas y ser
-                                        una superficie continua, no tiene pequeñas grietas que permitan la acumulación
-                                        de suciedad. Por lo tanto, no solo es un material más limpio por norma general,
-                                        sino que además permite un mantenimiento mucho más óptimo y fácil. Sin duda,
-                                        ¡una gran ventaja!</p>
 
-                                    <strong> Combina con diferentes materiales.</strong>
-                                    <p> El microcemento combina con todo tipo de materiales, por lo que se integra en
-                                        cualquier estilo.
-                                        Así, puedes tener el interior de la piscina con microcemento y la corona y su
-                                        alrededor de otro material, como madera, por ejemplo.</p>
 
-                                    <strong>Otorga continuidad en el diseño.</strong>
-                                    <p> Como hemos dicho, se puede combinar, pero si lo
-                                        que se busca es crear continuidad y amplitud, la mejor opción es utilizar el
-                                        microcemento para diferentes zonas. Así, parecerá que la piscina tiene un diseño
-                                        infinito que aúna todo el exterior. Y es que, con las diferentes granulometrías
-                                        en
-                                        las que se presenta y su característica antideslizante, se puede crear un
-                                        espacio de
-                                        diseño libre de resbalones sin ningún problema.</p>
-                                    <img style=" display: block;margin-left: auto;margin-right: auto; "
-                                        src="../imagenes/news/P1060160.JPG" alt="Microcemento para piscinas"
-                                        title="Microcemento para piscinas" /> <br>
-                                    <h2 class="en4"> Atlanttic,
-                                        nuestro microcemento especial para piscinas</h2>
-                                    <p> En Topciment hemos diseñado Atlanttic, nuestro microcemento bicomponente
-                                        desarrollado específicamente para espacios en contacto permanente con agua.
-                                        Permite crear espacios continuos que facilitan la unión entre varias zonas.</p>
+                                    <p>A continuación te damos seis motivos por los que los baños de microcemento
+                                        (hipervínculo que dirija a la galería específica de baños) van a causar
+                                        auténtico furor el año que viene. ¡Toma nota!</p>
+                                    <img src="../imagenes/news/topciment-pared-lavabo-baño-USA.jpg"
+                                        class="figure-img img-fluid rounded" alt="Microcemento topciment"
+                                        title="Microcemento en baños Topciment">
+                                    <h2 class="en3"> 1. Mayor sensación de amplitud </h2>
+                                    <p>
+                                        En la mayoría de ocasiones el cuarto de baño es la zona más pequeña de la casa
+                                        y, por ello, optimizar su tamaño lo máximo posible es prioritario cuando se toma
+                                        la decisión de renovarlo. Un baño de microcemento aporta esa mayor sensación de
+                                        amplitud que tanto se busca, gracias a la continuidad de este revestimiento
+                                        decorativo. Una amplitud que se potenciará aún más si se combina con colores
+                                        claros en suelos y paredes.uedes
+                                        imaginarlo, puedes hacerlo.
+                                    </p>
+                                    <h2 class="en3"> 2.Resistencia a la humedad</h2>
+                                    <p>
 
-                                    <p> Así, contamos con dos granulometrías diferentes:</p>
-                                    <ul>
-                                        <li>
-                                            <a class="links"
-                                                href="../sistemas/atlanttic-microcemento-para-piscinas.html#atlanttic-aquaciment">Atlanttic
-                                                Aquaciment M</a>, que ofrece acabados más suaves.
-                                        </li>
-                                        <li>
-                                            <a class="links"
-                                                href="../sistemas/atlanttic-microcemento-para-piscinas.html#atlanttic-aquaciment">Atlanttic
-                                                Aquaciment XL</a> , ideal para los bordes de la piscina, por ejemplo,
-                                            porque
-                                            ofrece acabados antideslizantes.
-                                        </li>
-                                    </ul>
+                                        Otra de las grandes ventajas del microcemento que contribuirán a que los baños
+                                        con microcemento se conviertan en una moda en 2021 es su alta resistencia a la
+                                        humedad. El baño es una zona que sufre de la humedad constantemente, por eso es
+                                        tan importante seleccionar correctamente los materiales a emplear. Con el
+                                        microcemento en baños este problema desaparece y, además, su acabado
+                                        antideslizante evitará esos resbalones tan traicioneros que todos padecemos
+                                        alguna vez en nuestra vida. Forrar suelos húmedos como el plato de la ducha o
+                                        los propios lavabos con microcemento es una opción ideal.
+                                    </p>
 
-                                    <p>Además, <a class="links"
-                                            href="../sistemas/atlanttic-microcemento-para-piscinas.html">Atlanttic</a>
-                                        puede utilizarse para diseños exteriores en estanques, terrazas
-                                        y zonas húmedas, por ejemplo, por lo que ofrece muchas posibilidades.
-                                        Tener una piscina es uno de los deseos más comunes, pero tener una piscina de
-                                        microcemento es, sin duda, un sueño.</p>
-                                    <p>Tener una piscina es uno de los deseos más comunes, pero tener una piscina de
-                                        microcemento es, sin duda, un sueño.</p>
+                                    <h2 class="en3"> 3. Versatilidad
+                                    </h2>
+                                    <p>
+                                        Otra de las grandes ventajas del microcemento que contribuirán a que los baños
+                                        con microcemento se conviertan en una moda en 2021 es su alta resistencia a la
+                                        humedad. El baño es una zona que sufre de la humedad constantemente, por eso es
+                                        tan importante seleccionar correctamente los materiales a emplear. Con el
+                                        microcemento en baños este problema desaparece y, además, su acabado
+                                        antideslizante evitará esos resbalones tan traicioneros que todos padecemos
+                                        alguna vez en nuestra vida. Forrar suelos húmedos como el plato de la ducha o
+                                        los propios lavabos con microcemento es una opción ideal.
+                                    </p>
 
-                                    <strong> <a class="links"
-                                            href="../sistemas/atlanttic-microcemento-para-piscinas.html">¿Empezamos?</a>
-                                    </strong>
+                                    <h2 class="en3"> 4. Limpieza fácil y sencilla
+                                    </h2>
+                                    <p>
+                                        Adecentar un cuarto de baño es una de las cosas que más pereza dan del mundo,
+                                        ¿verdad? Un problema que con este revestimiento continuo desaparece. Sobre cómo
+                                        limpiar el microcemento, has de saber que un baño de microcemento es muy fácil
+                                        de limpiar porque la ausencia de juntas de este recubrimiento evita que se
+                                        acumule la suciedad, tan solo que tendrás que usar un detergente neutro y una
+                                        balleta para un cuidado diario y… ¡listo!
+                                    </p>
 
+                                    <h2 class="en3"> 5. Potencia la luz natural
+                                    </h2>
+                                    <p>Si hay algo que ocupa y preocupa a la hora de renovar un baño es que sea
+                                        luminoso, crear una atmosfera relajada. Los baños de microcemento son idóneos
+                                        porque potencian la luz natural como si se reflejase sobre ellos, siempre y
+                                        cuando sean colores claros los empleados.
+                                    </p>
+
+                                    <h2 class="en3"> 6. Rapidez en la instalación
+                                    </h2>
+                                    <img src="../imagenes/news/topciment-suelo-pared-baño-Bearbeitet-alemania 2.jpg"
+                                        class="figure-img img-fluid rounded" alt="baos con microcemento  topciment"
+                                        title="baños con microcemento">
+                                    <p class="mt-5 mb-5">
+                                        Ya has visto. Conseguir un baño de revista nunca había sido tan fácil. Visita la
+                                        página web de Topciment <a class="links" href="../index.html">
+                                            <strong>Topciment</strong></a> y encuentra la inspiración en
+                                        nuestras imágenes de <a class="links" href="../galeria.html#banyo"><strong>
+                                                baños de microcemento</strong></a> ¡Te van a encantar!</p>
+
+
+
+
+                                    <h4 class="mb-3">También puede interesarte:</h4>
+<!-- 
+                                     <p> <i class="fa fa-arrow-right"></i> <a class="links"
+                                            href="8-motivos-microcemento-futuro-reformas.html"><strong>8
+                                                motivos por los que el microcemento es el futuro de las
+                                                reformas.</strong></a></p>
+
+                                    <p> <i class="fa fa-arrow-right"></i> <a class="links"
+                                            href="5-claves-para-una-reforma-de-exito-en-los-cuartos-de-bano.html"><strong>5
+                                                Claves para un reforma de éxito en los cuartos de baño.</strong> </a>
+                                    </p>  -->
+                                    <div class="row">
+                                        <div class="col-md-3">
+                                            <a href="8-motivos-microcemento-futuro-reformas.html"> <img
+                                                    class="pull-left mr-3 "
+                                                    src="../imagenes/news/Topciment Shkaf 2 -header.jpg"
+                                                    height="auto"></a>
+
+                                        </div>
+                                        <div class="col-md-8">
+                                            <p>
+                                                <p><a class="links"
+                                                        href="8-motivos-microcemento-futuro-reformas.html"><strong>8
+                                                            motivos por los que el microcemento es el futuro de las
+                                                            reformas.</strong></a></p>
+                                        </div>
+                                        </p>
+                                    </div>
+
+                                    <hr>
+                                    <div class="row">
+                                        <div class="col-md-3">
+                                          <a href="5-claves-para-una-reforma-de-exito-en-los-cuartos-de-bano.html">  <img class="pull-left mr-3 "
+                                                src="../imagenes/banos/banos-microcemento-s.jpg" height="auto"></a>
+
+                                        </div>
+                                        <div class="col-md-8">
+                                            <p><a class="links"
+                                                    href="5-claves-para-una-reforma-de-exito-en-los-cuartos-de-bano.html"><strong>5
+                                                        Claves para un reforma de éxito en los cuartos de baño.</strong>
+                                                </a></p>
+                                        </div>
+
+                                    </div>
+                                    <!--  <img style=" display: block;
+                                  margin-left: auto;
+                                  margin-right: auto;
+                                  width: 100%;"
+                                        src="https://www.topciment.com/imagenes/carmen-house/CARLES FAUS ARQUITECTURA - CARMEN HOUSE (18).jpg"
+                                        alt="Revestimientos interiores de Carmen House"
+                                        title="Revestimientos interiores de Carmen House" height="60%" /> -->
 
                                 </div>
                             </div>
                         </div>
-                        <section id="mantenimiento"></section>
-                        <div id="separador50px"></div>
+                 
 
                         <section id="mantenimiento">
                             <div class="contenedorMenuOculto">
@@ -382,11 +442,15 @@
                                 <div id="mitadTextoDerecha" data-animate-scroll='{"x": "100",
                     "y": "0",
                     "alpha": "0",
-                    "duration": "2"}' style="text-align:right"><a href="../noticias.html" target="_self">Volver a
-                                        Noticias</a></div>
+                    "duration": "2"}' style="text-align:right"><a href="../noticias.html" target="_self"><strong>Volver a
+                                        Noticias</strong></a></div>
                             </div>
                         </section>
                     </div>
+                           <script type="text/javascript" src="https://campaigns.zoho.com/js/zc.iframe.js"></script>
+<iframe frameborder="0" id="iframewin" width="100%" height="100%" style="height: 1100px;" src="https://sbvp.maillist-manage.com/ua/Optin?od=11287eca7844c8&zx=1262ecd78&lD=13769ac4f090f359&n=11699f74f036039&sD=13769ac4f0bd8d57"></iframe>
+                        <section id="mantenimiento"></section>
+                        <div id="separador50px"></div>
             </div>
         </div>
     </div>
