--- a/noticias.html
+++ b/noticias.html
@@ -369,6 +369,38 @@
             <div class="row">
                 <div class="col-md-12 pr-0 pl-0 ">
                     <div class="row">
+                        <!-- <div class="col-md-12 pr-0 pl-0 mb-5">
+                            <div class="card" style="border:none;">
+                                <h2 class="card-header"> <a
+                                        href="noticias-microcemento/6-razones-baños-microcemento-seran-tendencia.html">6
+                                        razones por las que los baños de microcemento serán tendencia en 2021</a> <span
+                                        class="float-right clocki"><i class="fa fa-clock-o mr-2"></i>2/11/2020</span>
+                                </h2>
+                                <div class="card-body">
+                                    <div class="paragraphs">
+                                        <div class="row">
+                                            <div class="span4">
+                                                <div class="clearfix content-heading">
+                                                    <img class="pull-left mr-3"
+                                                        src="imagenes/news/topciment-pared-lavabo-baño-USA-portada.jpg"
+                                                        height="auto" />
+                                                    <p> Si estás pensando en renovar o agrandar el baño en los próximos
+                                                        meses este artículo es para ti. Los baños de microcemento,
+                                                        revestimiento decorativo de altas prestaciones, serán tendencia
+                                                        en 2021. Conoce las 6 razones por las que los baños de
+                                                        microcemento se pondrán de moda en 2021. <br>
+                                                    </p>
+                                                    <a href="noticias-microcemento/6-razones-baños-microcemento-seran-tendencia.html"
+                                                        class="btn float-right btn-primary leermass mt-2">Leer
+                                                        más</a>
+                                                </div>
+
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div> -->
                         <div class="col-md-12 pr-0 pl-0 mb-5">
                             <div class="card" style="border:none;">
                                 <h2 class="card-header"> <a
@@ -400,7 +432,7 @@
                                         </div>
                                     </div>
                                 </div>
-                            </div> 
+                            </div>
                         </div>
                         <div class="col-md-12 pr-0 pl-0 mb-5">
                             <div class="card" style="border:none;">
@@ -416,9 +448,7 @@
                                                 <div class="clearfix content-heading">
                                                     <img class="pull-left mr-3" src="imagenes/news/portada.jpg"
                                                         height="auto" />
-                                                    <p>Es tiempo de sol, aire libre y de disfrutar del verano. Pero,
-                                                        sobre todo, es tiempo de tener una piscina de microcemento para
-                                                        contar la mejor calidad y el mejor estilo. <br>
+                                                    <p>Tener piscina propia suele ser uno de los sueños más recurrentes. Y es que ¿quién no querría estar todo el día en remojo o en el césped de su casa tomando tranquilamente el sol? Y, si queremos lo mejor, una piscina de microcemento es la opción perfecta. <br>
                                                     </p>
                                                     <a href="noticias-microcemento/piscinas-de-microcemento-la-mejor-opcion-posible.html"
                                                         class="btn float-right btn-primary leermass mt-2">Leer
