--- a/sistemas/sttandard-microcemento-bicomponente.html
+++ b/sistemas/sttandard-microcemento-bicomponente.html
@@ -303,7 +303,7 @@
 									<h1 class="h2s">Sttandard</h1>
 									<h3 class="h3s">es la línea de microcemento bicomponente (cemento y resina).</h3>
 								</p>
-								<p>MMicrocemento Sttandard es ideal para el artesano aplicador que tiene como objetivo
+								<p>Microcemento Sttandard es ideal para el artesano aplicador que tiene como objetivo
 									crear texturas con carácter propio. Sttandard le permite jugar con sus propias
 									mezclas y sacar, así, el máximo partido a los productos. </p>
 								<p>Su elección es sinónimo de éxito. Y es que su robustez y versatilidad posibilitan su
