--- a/indexv4.html
+++ b/indexv4.html
@@ -281,11 +281,12 @@
       background-image: url(imagenes/colores-topciment.jpg);
       background-size: cover;
     }
-
+ 
 
     #galeriai {
-      background-image: url(imagenes/sistemas/Topciment_Galeria_Proyectos_Aplicaciones_Gris.jpg);
-      background-size: cover;
+      background-image: url(imagenes/sistemas/imagen-cabecera-galeria-mosaico.jpg);
+      background-size: cover;  
+       /* url(imagenes/sistemas/Topciment_Galeria_Proyectos_Aplicaciones_Gris.jpg */
     }
 
     #section4 {
@@ -1591,7 +1592,7 @@ font-size: 55px;
 
             </div>
 
-          </div>
+          </div>  
 
           <style>
             #customForm {
@@ -1641,8 +1642,8 @@ font-size: 55px;
 .home_link a {
               padding: 0.5em 1em;
               font-size: 0.9em;
-              color: black;
-              background-color: white;
+              color: white;
+              background-color: black;
               text-decoration: none;
               text-transform: uppercase;
               letter-spacing: 0.3em;
@@ -1652,8 +1653,8 @@ font-size: 55px;
             }
 
             .home_link a:hover {
-              color: white;
-              background-color: black;
+              color: black;
+              background-color: white;
             }
             .carousel-control-prev a,
             carousel-control-next a:active,
@@ -1932,6 +1933,12 @@ font-size: 55px;
               </div>
             </div>
           </footer>
+<!--ZC Popup Code Starts-->
+<script type="text/javascript" id="ZC_Forms_Popup" src="https://campaigns.zoho.com/js/optin.min.js" ></script> <script type="text/javascript">window.onload=function(){loadZCPopup('2339f2ea05e1f35d39fcf0bc20e3e1ae285718bbc9c911bdc','ZCFORMVIEW','2485f9b3189202307757035ba063f0df6')}</script>
+<!--ZC Popup Code Ends-->
+
+          
+
           <script data-id='xenioo' data-node='app' src="https://static.xenioo.com/webchat/xenioowebchat.js"></script>
           <script>
             xenioowebchat.Start("83659ee5-4d66-473d-8243-6698f86a86c3");
@@ -1941,7 +1948,17 @@ font-size: 55px;
         </div>
       </div>
     </div>
+    <script>
+   $(document).ready(function () {
+      $("#zh_overlayColor, #zh_overlayOpacity, #zh_overlayNeeded, #ZCMP_afterResp,input").css('display', 'block');
+    });
+      
+
+    </script>
     <style>
+      #zh_overlayColor, #zh_overlayOpacity, #zh_overlayNeeded, #ZCMP_afterResp, input{
+display: block !important;
+      } 
       .logoIni {
         top: 84%;
         position: absolute;
