--- a/en/news.html
+++ b/en/news.html
@@ -300,6 +300,32 @@
                         <div class="col-md-12 pr-0 pl-0 mb-5">
                             <div class="card" style="border:none;">
                                 <h5 class="card-header"> <a
+                                        href="news-microcement/6-reasons-why-microcement-bathrooms-will-be-a-trend-in-2021.html">6 reasons why microcement bathrooms will be a trend in 2021</a> <span
+                                        class="float-right clocki"><i class="fa fa-clock-o mr-2"></i>2/11/2020</span>
+                                </h5>
+                                <div class="card-body">
+                                    <div class="paragraphs">
+                                        <div class="row">
+                                            <div class="span4">
+                                                <div class="clearfix content-heading">
+                                                    <img class="pull-left mr-3"
+                                                        src="../imagenes/news/topciment-pared-lavabo-baño-USA-portada.jpg"
+                                                        height="auto" />
+                                                    <p>If you are thinking of renovating or enlarging your bathroom in the coming months this article is for you. The microcement bathrooms, decorative coating of high performance, will be a trend in 2021. <br>
+                                                    </p>
+                                                    <a href="news-microcement/6-reasons-why-microcement-bathrooms-will-be-a-trend-in-2021.html"
+                                                        class="btn float-right btn-primary leermass mt-2">Read more</a>
+                                                </div>
+
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div> 
+                        <div class="col-md-12 pr-0 pl-0 mb-5">
+                            <div class="card" style="border:none;">
+                                <h5 class="card-header"> <a
                                         href="news-microcement/8-reasons-why-microcement-is-the-future-of-reforms.html">8
                                         reasons why microcement is the future of reforms</a> <span
                                         class="float-right clocki"><i class="fa fa-clock-o mr-2  "></i>13/10/2020</span>
