--- a/noticias-microcemento/6-razones-baños-microcemento-seran-tendencia.html
+++ b/noticias-microcemento/6-razones-baños-microcemento-seran-tendencia.html
@@ -285,7 +285,7 @@
                             <h1 id="queeselmicrocemento" data-animate-scroll='{"x": "-100",
                         "y": "0",
                         "alpha": "0",
-                        "duration": "1"}'><span class="en2">Seis/6 razones por las que los baños de microcemento serán
+                        "duration": "1"}'><span class="en2">6 razones por las que los baños de microcemento serán
                                     tendencia en 2021</span>
                             </h1>
                         </div>
@@ -379,7 +379,7 @@
 
 
                                     <h4 class="mb-3">También puede interesarte:</h4>
-<!-- 
+                                    <!-- 
                                      <p> <i class="fa fa-arrow-right"></i> <a class="links"
                                             href="8-motivos-microcemento-futuro-reformas.html"><strong>8
                                                 motivos por los que el microcemento es el futuro de las
@@ -410,8 +410,9 @@
                                     <hr>
                                     <div class="row">
                                         <div class="col-md-3">
-                                          <a href="5-claves-para-una-reforma-de-exito-en-los-cuartos-de-bano.html">  <img class="pull-left mr-3 "
-                                                src="../imagenes/banos/banos-microcemento-s.jpg" height="auto"></a>
+                                            <a href="5-claves-para-una-reforma-de-exito-en-los-cuartos-de-bano.html">
+                                                <img class="pull-left mr-3 "
+                                                    src="../imagenes/banos/banos-microcemento-s.jpg" height="auto"></a>
 
                                         </div>
                                         <div class="col-md-8">
@@ -421,6 +422,115 @@
                                                 </a></p>
                                         </div>
 
+                                    </div>
+                                     <div id="separador50px"></div>
+                                    <div class="row">
+
+                                        <div class="co-md-12 ">
+                                            <h2 style="font-size: 25px;text-align: center;margin-bottom: 25px;">
+                                                Suscríbete a nuestra newsletter</h2>
+                                            <h3 style="font-size: 16px;"> Recibe en tu email consejos para la aplicación
+                                                y cuidado del microcemento,
+                                                las últimas tendencias y novedades de los productos de Topciment.</h3>
+                                        </div>
+                                        <div class="co-md-12" style="width: 100%;">
+                                      <!--Zoho Campaigns Web-Optin Form's Header Code Starts Here-->
+
+<script type="text/javascript" src="https://sbvp.maillist-manage.com/js/optin.min.js" onload="setupSF('sf339f2ea05e1f35d3f0ab0fb7317495244b766efe51c265c7','ZCFORMVIEW',false,'light',false,'0')"></script>
+<script type="text/javascript">
+	function runOnFormSubmit_sf339f2ea05e1f35d3f0ab0fb7317495244b766efe51c265c7(th){
+		/*Before submit, if you want to trigger your event, "include your code here"*/
+	};
+</script>
+
+<style>
+.quick_form_11_css * {
+    -webkit-box-sizing: border-box !important;
+    -moz-box-sizing: border-box !important;
+    box-sizing: border-box !important;
+    overflow-wrap: break-word
+}
+@media only screen and (max-width: 600px) {.quick_form_11_css[name="SIGNUP_BODY"] { width: 100% !important; min-width: 100% !important; margin: 0px auto !important; padding: 0px !important } .SIGNUP_FLD { width: 90% !important; margin: 10px 5% !important; padding: 0px !important } .SIGNUP_FLD input { margin: 0 !important } }
+</style>
+
+<!--Zoho Campaigns Web-Optin Form's Header Code Ends Here--><!--Zoho Campaigns Web-Optin Form Starts Here-->
+
+<div id="sf339f2ea05e1f35d3f0ab0fb7317495244b766efe51c265c7" data-type="signupform" style="opacity: 1;">
+	<div id="customForm">
+		<div id="customForm" class="quick_form_11_css" style="margin: auto; background-color: white; width: 500px; z-index: 2; font-family: Arial; border-width: inherit; border-style: solid; overflow: hidden; border-color: rgb(0, 0, 0)" name="SIGNUP_BODY">
+			<div>
+				<div style="font-family: Arial; font-weight: bold; color: rgb(255, 255, 255); text-align: left; padding: 15px 20px 5px; width: 100%; display: block; height: 20px; font-size: 8px; border-width: 1px" id="SIGNUP_HEADING"></div>
+				<div style="position:relative;">
+					<div id="Zc_SignupSuccess" style="display:none;position:absolute;margin-left:4%;width:90%;background-color: white; padding: 3px; border: 3px solid rgb(194, 225, 154);  margin-top: 10px;margin-bottom:10px;word-break:break-all">
+						<table width="100%" cellpadding="0" cellspacing="0" border="0">
+							<tbody>
+								<tr>
+									<td width="10%">
+										<img class="successicon" src="https://sbvp.maillist-manage.com/images/challangeiconenable.jpg" align="absmiddle">
+									</td>
+									<td>
+										<span id="signupSuccessMsg" style="color: rgb(73, 140, 132); font-family: sans-serif; font-size: 14px;word-break:break-word">&nbsp;&nbsp;Thank you for Signing Up</span>
+									</td>
+								</tr>
+							</tbody>
+						</table>
+					</div>
+				</div>
+				<form method="POST" id="zcampaignOptinForm" style="margin: 0px; width: 100%" action="https://maillist-manage.com/weboptin.zc" target="_zcSignup">
+					<div style="background-color: rgb(255, 235, 232); padding: 10px; color: rgb(210, 0, 0); font-size: 11px; margin: 20px 10px 0px; border: 1px solid rgb(255, 217, 211); opacity: 1; display: none" id="errorMsgDiv">Please correct the marked field(s) below.</div>
+					<div style="position: relative; margin: 25px 0 15px 15px; width: 150px; height: 28px; display: inline-block" class="SIGNUP_FLD">
+						<input type="text" style="border-width: 0px 0px 1px; border-color: rgb(132, 156, 179); border-style: solid; width: 100%; height: 100%; z-index: 4; outline: none; padding: 5px 10px; color:black; text-align: left; font-family: Arial; border-radius: 0px; background-color: transparent; font-size: 13px" placeholder="Email" changeitem="SIGNUP_FORM_FIELD" name="CONTACT_EMAIL" id="EMBED_FORM_EMAIL_LABEL">
+					</div>
+					<div style="position: relative; margin: 15px 15px 15px 15px; width: 150px; height: 28px; display: inline-block" class="SIGNUP_FLD">
+						<input type="text" style="border-width: 0px 0px 1px; border-color: rgb(132, 156, 179); border-style: solid; width: 100%; height: 100%; z-index: 4; outline: none; padding: 5px 10px; color: black; text-align: left; font-family: Arial; border-radius: 0px; background-color: transparent; font-size: 14px" placeholder="Nombre" changeitem="SIGNUP_FORM_FIELD" name="LASTNAME" id="EMBED_FORM_NAME_LABEL">
+					</div>
+					<div style="position: relative; width: 100px; height: 28px; margin: 0 0 15px 12px; display: inline-block" class="SIGNUP_FLD">
+						<input type="button" style="text-align: center; width: 100%; height: 100%; z-index: 5; border: 0px; color: rgb(255, 255, 255); cursor: pointer; outline: none; font-size: 14px; background-color: rgb(254, 7, 19); border-radius: 0px" name="SIGNUP_SUBMIT_BUTTON" id="zcWebOptin" value="Suscríbete">
+					</div>
+					<input type="hidden" id="fieldBorder" value="">
+					<input type="hidden" id="submitType" name="submitType" value="optinCustomView">
+					<input type="hidden" id="emailReportId" name="emailReportId" value="">
+					<input type="hidden" id="formType" name="formType" value="QuickForm">
+					<input type="hidden" name="zx" id="cmpZuid" value="129a51c02">
+					<input type="hidden" name="zcvers" value="3.0">
+					<input type="hidden" name="oldListIds" id="allCheckedListIds" value="">
+					<input type="hidden" id="mode" name="mode" value="OptinCreateView">
+					<input type="hidden" id="zcld" name="zcld" value="13769ac4f090f359">
+					<input type="hidden" id="document_domain" value="">
+					<input type="hidden" id="zc_Url" value="sbvp.maillist-manage.com">
+					<input type="hidden" id="new_optin_response_in" value="0">
+					<input type="hidden" id="duplicate_optin_response_in" value="0">
+					<input type="hidden" name="zc_trackCode" id="zc_trackCode" value="ZCFORMVIEW">
+					<input type="hidden" id="zc_formIx" name="zc_formIx" value="339f2ea05e1f35d3f0ab0fb7317495244b766efe51c265c7">
+					<input type="hidden" id="viewFrom" value="URL_ACTION">
+					<span style="display: none" id="dt_CONTACT_EMAIL">1,true,6,Contact Email,2</span>
+					<span style="display: none" id="dt_FIRSTNAME">1,false,1,First Name,2</span>
+					<span style="display: none" id="dt_LASTNAME">1,false,1,Last Name,2</span>
+				</form>
+			</div>
+		</div>
+	</div>
+	<img src="https://sbvp.maillist-manage.com/images/spacer.gif" id="refImage" onload="referenceSetter(this)" style="display:none;">
+</div>
+<input type="hidden" id="signupFormType" value="QuickForm_Horizontal">
+<div id="zcOptinOverLay" oncontextmenu="return false" style="display:none;text-align: center; background-color: rgb(0, 0, 0); opacity: 0.5; z-index: 100; position: fixed; width: 100%; top: 0px; left: 0px; height: 988px;"></div>
+<div id="zcOptinSuccessPopup" style="display:none;z-index: 9999;width: 800px; height: 40%;top: 84px;position: fixed; left: 26%;background-color: #FFFFFF;border-color: #E6E6E6; border-style: solid; border-width: 1px;  box-shadow: 0 1px 10px #424242;padding: 35px;">
+	<span style="position: absolute;top: -16px;right:-14px;z-index:99999;cursor: pointer;" id="closeSuccess">
+		<img src="https://sbvp.maillist-manage.com/images/videoclose.png">
+	</span>
+	<div id="zcOptinSuccessPanel"></div>
+</div>
+
+<!--Zoho Campaigns Web-Optin Form Ends Here-->
+
+                                        </div>
+                                            <style>
+
+                                              .customForm{
+                                                  background-color: white !important;
+                                                   border-width: inherit !important;
+                                              }
+                                            </style>
                                     </div>
                                     <!--  <img style=" display: block;
                                   margin-left: auto;
@@ -433,7 +543,7 @@
                                 </div>
                             </div>
                         </div>
-                 
+
 
                         <section id="mantenimiento">
                             <div class="contenedorMenuOculto">
@@ -442,15 +552,18 @@
                                 <div id="mitadTextoDerecha" data-animate-scroll='{"x": "100",
                     "y": "0",
                     "alpha": "0",
-                    "duration": "2"}' style="text-align:right"><a href="../noticias.html" target="_self"><strong>Volver a
-                                        Noticias</strong></a></div>
+                    "duration": "2"}' style="text-align:right"><a href="../noticias.html" target="_self"><strong>Volver
+                                            a
+                                            Noticias</strong></a></div>
                             </div>
                         </section>
                     </div>
-                           <script type="text/javascript" src="https://campaigns.zoho.com/js/zc.iframe.js"></script>
-<iframe frameborder="0" id="iframewin" width="100%" height="100%" style="height: 1100px;" src="https://sbvp.maillist-manage.com/ua/Optin?od=11287eca7844c8&zx=1262ecd78&lD=13769ac4f090f359&n=11699f74f036039&sD=13769ac4f0bd8d57"></iframe>
-                        <section id="mantenimiento"></section>
-                        <div id="separador50px"></div>
+
+
+
+
+                    <section id="mantenimiento"></section>
+                    <div id="separador50px"></div>
             </div>
         </div>
     </div>
