--- a/noticias.html
+++ b/noticias.html
@@ -369,7 +369,7 @@
             <div class="row">
                 <div class="col-md-12 pr-0 pl-0 ">
                     <div class="row">
-                        <!-- <div class="col-md-12 pr-0 pl-0 mb-5">
+                      <div class="col-md-12 pr-0 pl-0 mb-5">
                             <div class="card" style="border:none;">
                                 <h2 class="card-header"> <a
                                         href="noticias-microcemento/6-razones-baños-microcemento-seran-tendencia.html">6
@@ -400,7 +400,7 @@
                                     </div>
                                 </div>
                             </div>
-                        </div> -->
+                        </div> 
                         <div class="col-md-12 pr-0 pl-0 mb-5">
                             <div class="card" style="border:none;">
                                 <h2 class="card-header"> <a
