--- a/it/notizie/topciment-presents-efectto.html
+++ b/it/notizie/topciment-presents-efectto.html
@@ -265,13 +265,7 @@
 										sarà svelato nei prossimi mesi. Il primo di questi nuovi prodotti a vedere
 										la luce è Efectto Quartz.
 									</p>
-									<p><strong>Efectto Quartz</strong> deve il suo nome alla finitura minerale e
-										naturale che lo caratterizza. A
-										Una volta applicato, questo prodotto permette di ottenere finiture decorative
-										molto piacevoli.
-										sia in vista che al tatto. La sua finitura è simile a quella del microcemento,
-										ma con un
-										molto più naturale e senza filigrane.</p>
+									<p><strong>Efectto Quartz</strong> deve il suo nome alla finitura minerale e naturale che lo caratterizza. Una volta applicato, questo prodotto permette di ottenere finiture decorative molto piacevoli alla vista e al tatto. La sua finitura è simile al microcemento, ma con una consistenza molto più naturale e senza nuvolature.</p>
 
 									<p> Inoltre, uno dei grandi vantaggi di Efectto Quartz è che è pronto all'uso.
 										la loro preparazione è meno laboriosa e più pratica. Hai solo bisogno
