--- a/en/systems/classic-mettal-metallic-paints.html
+++ b/en/systems/classic-mettal-metallic-paints.html
@@ -201,7 +201,7 @@
                     <li>
                         <a href="#up" style="font-size:26px">Classic Mettal</a>
                     </li>
-                    <li><a href="#que-es-puremetal">What is Classic Mettal?</a></li>
+                    <li><a href="#que-es-classic-mettal">What is Classic Mettal?</a></li>
                     <li><a href="#puremetal-aluminium">Classic Mettal </a></li>
                     <li><a href="#aplicacion">Aplicattion</a></li>
                 </ul>
@@ -272,7 +272,7 @@
                         style="background-image:url('../../imagenes/classic-mettal/background/classic_mettal_fondo_03.jpg'); "
                         data-img-width="1920" data-img-height="1080" data-diff="100">
                     </div>
-                    <a id="que-es-puremetal"
+                    <a id="que-es-classic-mettal"
                         style="display: block; height: 60px; margin-top: -60px; visibility: hidden;"></a>
                     <div class="contenedorMenuOculto">
                         <div class="contenedorMagenDerecha"
